Update from https://github.com/a2i2/bdi-under-the-radar/commit/26e08fab7d2353655a1caa7f34c6141bc6ad1129

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property="og:title" content="Black Dog Institute | Under the Radar">
     <meta property="og:description" content="If you are a man who has experienced thoughts of suicide in the past six months, the Black Dog Institute invites you to take part in our study. Add your voice to this research, so we can understand what&apos;s helpful.">
     <meta property="og:image" content="https://utr.blackdoginstitute.org.au/bdi-og-facebook.jpg">
@@ -19,7 +19,7 @@
     <meta name="keywords" content="mental health, wellbeing, research, black dog institute">
     <meta name="author" content="Black Dog Institute">
     <title>Black Dog Institute | Under the Radar</title>
-    <script type="module" crossorigin src="/assets/index.d5f8d194.js"></script>
+    <script type="module" crossorigin src="/assets/index.4f1ca18e.js"></script>
     <link rel="stylesheet" href="/assets/index.82304da5.css">
   </head>
   <body id="body">
