Update from https://github.com/a2i2/bdi-under-the-radar/commit/f6ffe9c5c9670ae4976becf8df23a92706c1b90d

--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta property="og:title" content="Black Dog Institute | Under the Radar">
-    <meta property="og:description" content="If you are a man who has experienced thoughts of suicide in the past six months, the Black Dog Institute invites you to take part in our study. Add your voice to this research, so we can understand what&apos;s helpful.">
-    <meta property="og:image" content="https://utr.blackdoginstitute.org.au/bdi-og-facebook.jpg">
-    <meta property="og:image:alt" content="Black Dog Institute | Under the Radar">
-    <meta property="og:url" content="https://utr.blackdoginstitute.org.au">
-    <meta property="og:type" content="website"> 
-    <meta name="twitter:image" content="https://utr.blackdoginstitute.org.au/bdi-og-twitter.jpg">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@blackdoginst">
-    <meta name="twitter:site" content="@blackdoginst">
-    <meta name="description" content="If you are a man who has experienced thoughts of suicide in the past six months, the Black Dog Institute invites you to take part in our study. Add your voice to this research, so we can understand what&apos;s helpful.">
-    <meta name="keywords" content="mental health, wellbeing, research, black dog institute">
-    <meta name="author" content="Black Dog Institute">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=DM Sans" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta property="og:title" content="Black Dog Institute | Under the Radar" />
+    <meta
+      property="og:description"
+      content="If you are a man who has experienced thoughts of suicide in the past six months, the Black Dog Institute invites you to take part in our study. Add your voice to this research, so we can understand what's helpful."
+    />
+    <meta property="og:image" content="https://utr.blackdoginstitute.org.au/bdi-og-facebook.jpg" />
+    <meta property="og:image:alt" content="Black Dog Institute | Under the Radar" />
+    <meta property="og:url" content="https://utr.blackdoginstitute.org.au" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:image" content="https://utr.blackdoginstitute.org.au/bdi-og-twitter.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@blackdoginst" />
+    <meta name="twitter:site" content="@blackdoginst" />
+    <meta
+      name="description"
+      content="If you are a man who has experienced thoughts of suicide in the past six months, the Black Dog Institute invites you to take part in our study. Add your voice to this research, so we can understand what's helpful."
+    />
+    <meta name="keywords" content="mental health, wellbeing, research, black dog institute" />
+    <meta name="author" content="Black Dog Institute" />
     <title>Black Dog Institute | Under the Radar</title>
+    <script>
+      !(function (f, b, e, v, n, t, s) {if (f.fbq) return;n = f.fbq = function () {n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments);};if (!f._fbq) f._fbq = n;n.push = n;n.loaded = !0;n.version = "2.0";n.queue = [];t = b.createElement(e);t.async = !0;t.src = v;s = b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t, s);})(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
+      fbq("init", "1070571443971391");
+      fbq("track", "PageView");
+    </script>
+    <noscript><img height="1" width="1" style="display: none" src="https://www.facebook.com/tr?id=1070571443971391&ev=PageView&noscript=1"/></noscript>
     <script type="module" crossorigin src="/assets/index.72e763fa.js"></script>
     <link rel="stylesheet" href="/assets/index.300dc701.css">
   </head>
