--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta http-equiv="Refresh" content="0; URL=https://www.blackdoginstitute.org.au/resources-support/" />
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=DM Sans" rel="stylesheet" />
@@ -31,11 +32,7 @@
       fbq("track", "PageView");
     </script>
     <noscript><img height="1" width="1" style="display: none" src="https://www.facebook.com/tr?id=1070571443971391&ev=PageView&noscript=1"/></noscript>
-    <script type="module" crossorigin src="/assets/index.4593c8ab.js"></script>
-    <link rel="stylesheet" href="/assets/index.507aa727.css">
   </head>
-  <body id="body">
-    <div id="app"></div>
-    
+  <body>
   </body>
 </html>
